-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: javafx
After the fix for JDK-8162783 the native GetScreenCapture method in the Windows glass Robot.cpp code is only ever called with the same values for src and dst size. This means that the code path that calls StretchBlt is no longer used and can be removed, along with changing the arguments to the function to only take in a single pair of width and height values.
- is blocked by
-
JDK-8162783 [Windows] HiDPI screenshot artifacts using glass Robot
-
- Resolved
-