8163795: [Windows] Remove call to StretchBlt in native GetScreenCapture method

Reviewed-by: kcr